--- a/ListViewDraggingAnimation/res/layout/activity_list_view.xml
+++ b/ListViewDraggingAnimation/res/layout/activity_list_view.xml
@@ -20,7 +20,7 @@
     android:layout_height="match_parent"
     tools:context=".ListViewAnimations" >
 
-        <com.example.android.listviewdragginganimation.DynamicListView
+        <com.birdy.dynamiclistview.DynamicListView
             android:id="@+id/listview"
             android:background="#0000"
             android:layout_width="match_parent"
